@@ -279,8 +279,8 @@ int  ExecutiveUnsetSetting(PyMOLGlobals *G,int index,char *sele,
 
 int  ExecutiveAssignSS(PyMOLGlobals *G,char *target,int state,char *context,int preserve,int quiet);
 
-int ExecutiveRampMapNew(PyMOLGlobals *G,char *name,char *map_name,PyObject *range,
-                        PyObject *color,int map_state,char *sele,
+int ExecutiveRampNew(PyMOLGlobals *G,char *name,char *src_name,PyObject *range,
+                        PyObject *color,int src_state,char *sele,
                         float beyond,float within,float sigma,int zero);
 
 int ExecutiveValidateObjectPtr(PyMOLGlobals *G,CObject *ptr,int object_type);
